Background color and gif

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>Natsu x Lucy</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <img src="images/NaLu.gif">
+    <header>Natsu x Lisanna</header>
     <h1>This website was made as a dedication site as to why Natsu x Lucy is NOT the best ship in Fairy Tail. Enjoy!</h1>
 </body>
 </html>
